<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight" tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title_text"
        android:textSize="18sp"
        android:textColor="@color/colorKeyword"
        android:paddingTop="36dp"
        android:layout_marginTop="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_ponozkovy_paradox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameTitleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_sock"
        android:textSize="48sp"
        android:textColor="#4AA0C7" android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <TextView
        android:id="@+id/gameTitleBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paradox"
        android:textSize="48sp"
        android:textColor="#CC3333" android:layout_marginTop="-16dp" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameTitleTop" />

    <TextView
        android:id="@+id/sloganTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost_sock_lost_mind"
        android:textSize="18sp"
        android:textColor="#2D3A4B"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameTitleBottom" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:backgroundTint="#2D3A4B" android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="48dp"
        app:cornerRadius="24dp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/walkthroughButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/walkthrough"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
